fix theta calculation; disaply data by hasontable; fix the spacing between element

--- a/src/output.css
+++ b/src/output.css
@@ -3449,6 +3449,14 @@ html {
   margin-top: 2.5rem;
 }
 
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
 .flex {
   display: flex;
 }
